# Scathat

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FRONTEND_CONTRACT_INTEGRATION.md  GETTING_STARTED.md  PROJECT_FILE_STRUCTURE.md  QUICK_START_SMART_CONTRACTS.md  README.md  SCATHAT_FILE_STRUCTURE.json  SCATHAT_V2_COMPLETE_GUIDE.md  SCATHAT_V3_SUMMARY.md  TEAM_DEVELOPER_GUIDE.md  TEAM_DEVELOPER_SMART_CONTRACT_GUIDE.md  TEAM_SETUP_GUIDE.md  hardhat.config.ts  package-lock.json  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
components/: animated-background.tsx  dashboard.tsx  download.tsx  footer.tsx  header.tsx  hero.tsx  how-it-works.tsx  problem.tsx  solution.tsx  theme-provider.tsx
contracts/: DEPLOYMENT_GUIDE.md  README.md  RiskRegistry.sol
contracts/abi/: RiskRegistry.json
contracts/interfaces/: IRiskRegistry.sol
contracts/test/: RiskRegistry.test.ts
contracts/types/: index.ts
docs/: QUICK_REFERENCE.md
documentation/: PRIVACY_POLICY.md
extension/: README.md
extension/public/: manifest.json
lib/: animations.ts
rust-cex/: Cargo.toml  cex_wallets.csv  cex_wallets.json
rust-cex/src/: main.rs
rust-scraping/: Cargo.toml  scraper_state.json  verified_contracts.json
rust-scraping/src/: main.rs
scathat-ai-model/: README.md
scathat-backend/: test_agentkit_endpoints.py  test_ai_engine.py
scathat-data-base/: README.md
scathat-frontend/: package.json  tsconfig.json  vercel.json
scripts/: deploy.ts  generate-texture.mjs  setup-writers.ts  test-registry.ts
types/: framer-motion.d.ts
(+242 files in other folders)
