[package]
name = "cex-wallet-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1.10"
anyhow = "1.0"
futures = "0.3"

# For Ethereum address validation
rust-crypto = "0.2"
tiny-keccak = { version = "2.0", features = ["keccak"] }