[package]
name = "basescan-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assertables = "6.0"